fix: 冻藏盒单元测试